@@ -4,7 +4,9 @@ Installation Instructions for WSPR 4.0
 
 The following is a brief installation guide using Linux as the example. WSPR
 can be built on Windows (using MinGW+MSYS / JTSDK-PY), Mac OSX 10.6/7,
-and most Linux variants, provided the dependencies are met.
+and most Linux variants, provided the dependencies are met. Package names can
+very considerably between distributions. Consult your package manager for the
+appropriate package names.
 
 REQUIRED DEPENDENCIES
 ---------------------
@@ -16,15 +18,14 @@ To compile WSPR, as a minimum, you will need the following:
 	* FFTW 3.3+-dev
 	* Samplerate Development Library.
 	* Python3.2+
-	* Numeric Python (Numpy), provides F2PY-3.2+
+	* Numeric Python (Numpy 1.8.1+), providing F2PY v2.0
 	* PIL, (Python Imaging Library)
 	* Python-tk (Tcl\TK 8.6.1 or Later)
 	* Hamlib 1.2.15.x (or current distro verson
 
-NOTE: Where possible, install development header packages. Consult your
-distribuntion documentation for package names.
+NOTE: Where possible, install development header packages.
 
-Example: For Ubuntu 14.04, install the following:
+Example: For Ubuntu 14.04, the following packages are required:
 
 sudo apt-get install autoconf autotools build-essential gfortran libtool \
 libtool libfftw3-dev libgfortran3:i386 libusb-dev libhamlib-dev libhamlib-utils \
@@ -32,14 +33,35 @@ libsamplerate0-dev portaudio19-dev python3-setuptools python3-dev python3-imagin
 python3-imaging-tk python3-pip python3-tk python3-numpy texinfo
 
 
+INSTALL
+-------
+To build and install, issue the foolowing:
+
+./autogen.sh
+
+make && make install
+
+The install target default is $HOME/wspr To run WSPR,
+
+cd $HOME/wspr
+
+python3 -O wspr.py
+
+Additional options / methods are explained below.
+
+
 INSTALL PREFIX
 --------------
-The default install location is /usr/local. You can change the
+The default install location is $HOME/wspr. You can change the
 install locaiton using the following configuration parameter:
 
 Example:
 
-./configure --prefix=/home/$USER/wspr
+./configure --prefix=/$HOME/testing/wspr
+
+Note: Due to confliucting file names with "fmt", it's *not* advisable
+to install WSPR to /usr/local as Coreutils also has an application
+called "fmt.
 
 
 NON-STANDARD LIBRARY LOCATIONS
@@ -53,10 +75,29 @@ Example:
 ./configure --with-portaudio-lib-dir=/usr/lib/x86_64-linux-gnu
 --with-portaudio-include-dir=/usr/include
 
+Note: Provisions for Samplerate and FFTW3F also use this input method
+if needed.
 
-DUAL-PYTHON SYSTEMS
+If used, make sure you system ldconfig has been updated to find non-standard
+library or header files.
+
+*CAUTION*
+
+Multi-Build systems need to proceed with caution. Setting the default lib
+directory if fine, as long as all the library / header files can be found for
+*all* dependencies. A typical Linux system wil use /usr/lib for 32-bit and
+may define /usr/lib/amd64 or /usr/ib/x86_64 or the like, but not all 
+dependencies may be 64-bit, and thus, you may run into trouble finding libs if
+your system does not account for this through ldconig. Consult your distribution
+documentation for more information regaurding ldconfig and the various
+locations where libraries are installed.
+
+
+MULTI-PYTHON SYSTEMS
 --------------------
-On dual Python systems, you need to specify Python3 and F2PY3 locations:
+On dual Python systems, you *may* need to specify Python3 and F2PY3 locations.
+The configure scripts tests for both Python3 and F2PY, but if you system has
+unique installation locations, the following may be helpful:
 
 Example:
 
@@ -65,7 +106,7 @@ Example:
 
 CONFIGURE && MAKE
 -----------------
-To configure and build WSPR, type the following:
+To configure or reconfigure, then build WSPR, type the following:
 
 
 ./autogen.sh
@@ -79,29 +120,47 @@ To see available configure options, type:
 
 RUN WPSR
 --------
+To run WSPR after build, cd to ../wspr and:
 
 python3 -O wspr.py
+
+Note: If your default python is python3, and called by issuing python,
+then change to:
+
+python -O wspr.py
 
 
 MAKE INSTALL
 ------------
-To install WSPR system wide (for all users):
+This target install WSPR to the ${PREFIX} location specified by the user.
+If --prefix= was not changed, the default installation directory is
+$HOME/wspr:
 
-sudo make install
-
-or
-
-root make install
+make install
 
 
 CLEAN THE BUILD TREE
 --------------------
+This target removes files generated during make.
+
 make clean
 
 
 CLEAN FOR DISTRIBUTION
 ----------------------
+This target removes most all of the build files, (configure script, Makfile)
+and so on. This will also remove files generated from wspr0 and fmt.
+
 make distclean
+
+
+UNINSTALL
+---------
+The make script has a provision to uninstall WSPR. It serves the same function
+as simply deleting the ../wspr folder. The delete location is specified in
+the Makefile, based on the users input. To tun uninstall:
+
+make uninstall
 
 
 BASIC MAC OSX INSTALLATION INSTUCTIONS (Example 10.7)
