@@ -20,7 +20,6 @@ AC_PROG_INSTALL
 AC_PROG_RANLIB
 AC_USE_SYSTEM_EXTENSIONS
 
-
 dnl standard m4 checks
 AC_C_INLINE
 AC_PROG_GCC_TRADITIONAL
@@ -35,6 +34,7 @@ AC_PATH_PROG(AWK, awk)
 AC_PATH_PROG(SED, sed)
 AC_PATH_PROG(AR, ar)
 AC_PATH_PROG(LD, ld)
+AC_PATH_PROG(SHELL, bash)
 AC_SUBST(VERSION, "${version}")
 AC_MSG_CHECKING([OS])
 AC_SUBST(OS, "${host_os}")
